--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mega2560
+default_envs = STM32F103RC_btt_512K
 
 [common]
 default_src_filter = +<src/*> -<src/config> -<src/HAL> +<src/HAL/shared>
@@ -29,7 +29,7 @@ lib_deps =
   TMCStepper@>=0.6.2,<1.0.0
   Adafruit NeoPixel
   U8glib-HAL=https://github.com/MarlinFirmware/U8glib-HAL/archive/bugfix.zip
-  Adafruit_MAX31865=https://github.com/adafruit/Adafruit_MAX31865/archive/master.zip
+  Adafruit_MAX31865=https://github.com/adafruit/Adafruit_MAX31865/archive/1.1.0.zip
   LiquidTWI2=https://github.com/lincomatic/LiquidTWI2/archive/master.zip
   Arduino-L6470=https://github.com/ameyer/Arduino-L6470/archive/0.8.0.zip
   SailfishLCD=https://github.com/mikeshub/SailfishLCD/archive/master.zip
@@ -291,7 +291,7 @@ upload_protocol   = serial
 #
 
 [env:STM32F103RC_btt]
-platform          = ststm32
+platform          = ststm32@<6.2.0
 board             = genericSTM32F103RC
 platform_packages = tool-stm32duino
 build_flags       = !python Marlin/src/HAL/STM32F1/build_flags.py
@@ -306,7 +306,7 @@ lib_ignore        = Adafruit NeoPixel, SPI
 monitor_speed     = 115200
 
 [env:STM32F103RC_btt_USB]
-platform          = ststm32
+platform          = ststm32@<6.2.0
 board             = genericSTM32F103RC
 platform_packages = tool-stm32duino
 build_flags       = !python Marlin/src/HAL/STM32F1/build_flags.py
@@ -321,7 +321,7 @@ lib_ignore        = Adafruit NeoPixel, SPI
 monitor_speed     = 115200
 
 [env:STM32F103RC_btt_512K]
-platform          = ststm32
+platform          = ststm32@<6.2.0
 board             = genericSTM32F103RC
 board_upload.maximum_size=524288
 platform_packages = tool-stm32duino
@@ -337,7 +337,7 @@ lib_ignore        = Adafruit NeoPixel, SPI
 monitor_speed     = 115200
 
 [env:STM32F103RC_btt_512K_USB]
-platform          = ststm32
+platform          = ststm32@<6.2.0
 board             = genericSTM32F103RC
 board_upload.maximum_size=524288
 platform_packages = tool-stm32duino
